--- a/app/src/main/res/layout/activity_new_photo.xml
+++ b/app/src/main/res/layout/activity_new_photo.xml
@@ -45,7 +45,7 @@
             android:clickable="true"
             android:onClick="selectCoin"
             app:backgroundTint="@android:color/white"
-            app:srcCompat="@drawable/coin" />
+            app:srcCompat="@drawable/iconcoin" />
 
         <Button
             android:id="@+id/button12"
