--- a/app/src/main/res/layout/activity_view_photo.xml
+++ b/app/src/main/res/layout/activity_view_photo.xml
@@ -160,7 +160,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Cantidad de microplásticos 21gr"
+        android:text="Cantidad de microplásticos 6 cm³"
         android:textAlignment="center"
         android:textSize="18sp" />
 
